--- a/app/src/main/res/layout/activity_sesion_administrador.xml
+++ b/app/src/main/res/layout/activity_sesion_administrador.xml
@@ -52,6 +52,7 @@
                 android:id="@+id/button12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:onClick="goToCRUDAsks"
                 android:text="@string/CRUDPreguntas"
                 android:textAllCaps="false" />
 
