--- a/app/src/main/res/layout/activity_crear_prueba.xml
+++ b/app/src/main/res/layout/activity_crear_prueba.xml
@@ -12,11 +12,13 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:gravity="center"
         android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        >
+        app:layout_constraintTop_toTopOf="parent">
 
         <Space
             android:layout_width="match_parent"
@@ -35,11 +37,18 @@
             android:layout_height="12sp" />
 
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/BTP"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/Creacion"
-            android:textAllCaps="false"/>
+            android:onClick="Creando_prueba"
+            android:text="@string/GuardarCrear"
+            android:textAllCaps="false" />
+
+        <ProgressBar
+            android:id="@+id/PB"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
