--- a/app/src/main/res/layout/activity_ver_prueba.xml
+++ b/app/src/main/res/layout/activity_ver_prueba.xml
@@ -6,4 +6,38 @@
     android:layout_height="match_parent"
     tools:context=".VerPrueba">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <Button
+            android:id="@+id/Breload"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="Call"
+            android:text="@string/Verprueba"
+            android:textAllCaps="false"/>
+
+        <TextView
+            android:id="@+id/TVP"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
+
+        <ProgressBar
+            android:id="@+id/PBVerPruebas"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
