Historias de usuario
Cargar preguntas a la vista xml

--- a/app/src/main/res/layout/activity_actualizar_prueba.xml
+++ b/app/src/main/res/layout/activity_actualizar_prueba.xml
@@ -26,12 +26,12 @@
 
             <EditText
                 android:id="@+id/ETIDUpdate"
-                android:layout_width="178dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
                 android:hint="@string/IDUpdate"
-                android:inputType="textPersonName" />
+                android:inputType="number" />
 
             <Button
                 android:id="@+id/BidUpdate"
